# cmake-sw

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: Steamworks.cmake
src/: CMakeLists.txt  main.cpp
